ch06/builder/builder-usage/tests/fails/build_unnamed_fields.rs
use builder_macro::Builder;

#[derive(Builder)]
struct UnnamedStruct(i32, String);

fn main() {}
